--- a/Refactoring3/changes.txt
+++ b/Refactoring3/changes.txt
@@ -5,3 +5,11 @@ In Lane, got rid of the recievePinsetterEvent method and added the standard Obse
 	
 Changed the constructor of the PinSetterView.java class to accept a Pinsetter so that is has
 the responsibility of adding itself as an observer.
+
+Removed the PinsetterObserver class.
+
+Replaced the extend Thread call in Lane to an implements Runnable. Then in the constructor
+we created a new thread object, passing itself (as a Runnable object) as a parameter), 
+and then started it. This effectively allows for us to extend the Observable class in Lane
+now.
+
